updated markup to view.erb - to make webpage responsive

--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -1,8 +1,11 @@
 <div class="addCamera">
-
+  
+    <div class="row">
+    <div class="col-xs-10 col-xs-offset-1"> 
+    
   <!-- Button trigger modal -->
   <div class="row">
-    <div class="col-sm-3 col-sm-offset-8">
+    <div class="col-xs-3 col-xs-offset-9">
       <div class="addButton">
         <button class="btn btn-primary btn-md" data-toggle="modal" data-target="#myModal">Add Camera</button>
       </div>
@@ -11,197 +14,102 @@
   
   <div class="border-1"></div>
   
-  <div class="row">
-    <div class="col-sm-10 col-sm-offset-1">
-      <div class="streamList">
-        <div class="streamContainer">
-          <div class="row">
-            <div class="CameraInfo">
-              <div class="col-sm-12">
-                <a href="#"><img class="pull-left" src="/img/rememberance.jpg" width="265px"></a>
-                <div class="online">
-                  <h4><a href="#">Remembrance Cam</a></h4>
-                  <div class="positionTest">
-                    <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
-                  </div>
-                </div>
-                <div class="camAddress">
-                  <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
-                </div>
-                <div class="url">
-                  <p>Internal URL: 89.101.225.151</p>
-                  <p>External URL: 24.192.38.337</p>
-                </div>
-                <h5>Accessed by:</h5>
-                <p class="userInfo">Marco Herbst</p>
-              </div>
-            </div>
+    <div class="streamList">
+      <div class="streamContainer">
+        <div class="row">
+          <div class="col-md-4 col-sm-12">
+            <a href="#"><img class="img-responsive" src="/img/rememberance.jpg" width="265px"></a>
           </div>
+          <div class="col-md-8 col-sm-12">
+            <div class="right_container">
+              <div class="online">
+                <h4><a href="#">Remembrance Cam</a></h4>
+                <div class="positionTest">
+                  <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+                </div>
+              </div>
+              <div class="camAddress">
+                <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
+              </div>
+              <div class="url">
+                <p>Internal URL: 89.101.225.151</p>
+                <p>External URL: 24.192.38.337</p>
+              </div>
+              <h5>Accessed by:</h5>
+              <p class="userInfo">Marco Herbst</p>
+            </div>
+          </div> 
         </div>
       </div>
     </div>
-  </div>
 
   <div class="border-1"></div>
 
-  <div class="row">
-    <div class="col-sm-10 col-sm-offset-1">
-      <div class="streamList">
-        <div class="streamContainer">
-          <div class="row">
-            <div class="CameraInfo">
-              <div class="col-sm-12">
-                <a href="#"><img class="pull-left" src="/img/rememberance.jpg" width="265px"></a>
-                <div class="offline">
-                  <h4><a href="#">Remembrance Cam</a></h4>
-                  <div class="positionTest">
-                    <p><i class="fa fa-1x fa-minus-circle icon-align-center"></i>Offline</p>
-                  </div>
-                </div>
-                <div class="camAddress">
-                  <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
-                </div>
-                <div class="url">
-                  <p>Internal URL: 89.101.225.151</p>
-                  <p>External URL: 24.192.38.337</p>
-                </div>
-                <h5>Accessed by:</h5>
-                <p class="userInfo">Marco Herbst</p>
-              </div>
-            </div>
+    <div class="streamList">
+      <div class="streamContainer">
+        <div class="row">
+          <div class="col-md-4 col-sm-12">
+            <a href="#"><img class="img-responsive" src="/img/rememberance.jpg" width="265px"></a>
           </div>
+          <div class="col-md-8 col-sm-12">
+            <div class="right_container">
+              <div class="online">
+                <h4><a href="#">Remembrance Cam</a></h4>
+                <div class="positionTest">
+                  <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+                </div>
+              </div>
+              <div class="camAddress">
+                <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
+              </div>
+              <div class="url">
+                <p>Internal URL: 89.101.225.151</p>
+                <p>External URL: 24.192.38.337</p>
+              </div>
+              <h5>Accessed by:</h5>
+              <p class="userInfo">Marco Herbst</p>
+            </div>
+          </div> 
         </div>
       </div>
     </div>
-  </div>
-
 
   <div class="border-1"></div>
-
-  <br/><br/><br/><!-- Temp Line Breaks -->
-
-  <div class="row">
-    <div class="col-sm-10 col-sm-offset-1">
-
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="streamList">
-            <img class="pull-left" src="/img/rememberance_refr.jpg" width="450px" >
+  
+    <div class="streamList">
+      <div class="streamContainer">
+        <div class="row">
+          <div class="col-md-4 col-sm-12">
+            <a href="#"><img class="img-responsive" src="/img/rememberance.jpg" width="265px"></a>
           </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="stream">
-            <div class="online">
-              <h4>Remembrance Cam</h4>
-              <div class="positionTest">
-                <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+          <div class="col-md-8 col-sm-12">
+            <div class="right_container">
+              <div class="online">
+                <h4><a href="#">Remembrance Cam</a></h4>
+                <div class="positionTest">
+                  <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+                </div>
               </div>
-            </div>
-            <div class="camAddress">
-              <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
-              <a href="#"><p><i class="fa fa-1x fa-repeat icon-align-center blue"></i>Refresh</p></a>
-            </div>
-            <div class="settingsButton">
-              <button class="btn btn-primary btn-md" data-toggle="modal" data-target="#myModal">SETTINGS</button>
-            </div>
-            
-            
-            <div class="applications">
-              <div class="permissions">
-                <table class="table table-condensed table-hover">
-                  <tr>
-                    <th>App</th>
-                    <th>Name</th>
-                    <th>Date Added</th>
-                    <th>Price</th>
-                    <th></th>
-                  </tr>
-                  <tr>
-                    <td><i class="fa fa-2x fa-clock-o icon-align-center blue"></i></td>
-                    <td>Timelapse</td>
-                    <td>05/01/14</td>
-                    <td>Free</td>
-                    <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
-                  </tr>
-                  <tr>
-                    <td><i class="fa fa-2x fa-envelope icon-align-center blue"></i></td>
-                    <td>Snapshot</td>
-                    <td>01/01/14</td>
-                    <td>Free</td>
-                    <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
-                  </tr>
-                  <tr>
-                    <td><i class="fa fa-2x fa-android icon-align-center blue"></i></td>
-                    <td>App Generator</td>
-                    <td>15/01/14</td>
-                    <td>Free</td>
-                    <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
-                  </tr>
-                </table>
+              <div class="camAddress">
+                <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
               </div>
+              <div class="url">
+                <p>Internal URL: 89.101.225.151</p>
+                <p>External URL: 24.192.38.337</p>
+              </div>
+              <h5>Accessed by:</h5>
+              <p class="userInfo">Marco Herbst</p>
             </div>
-          </div>
+          </div> 
         </div>
       </div>
+    </div>
 
-      <div class="border-1"></div>
-      
-      <div class="row">
-        <div class="col-sm-6">
-          <h4>Permissions</h4>
-          <div class="permissions">
-            <table class="table table-condensed table-hover">
-              <tr>
-                <th>User</th>
-                <th>App</th>
-                <th>Permission</th>
-                <th></th>
-              </tr>
-              <tr>
-                <td>Marco</td>
-                <td>Timelapse</td>
-                <td>Read-only</td>
-                <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
-              </tr>
-              <tr>
-                <td> - </td>
-                <td> - </td>
-                <td>Full</td>
-                <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
-              </tr>
-              <tr>
-                <td>Paddy</td>
-                <td>MMS</td>
-                <td>Write</td>
-                <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
-              </tr>
-            </table>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <h4>Activity</h4>
-          <div class="activityBox">
-            <p>API Requests to this camera: 4837432 </p>
-            <p>Last request logged: 13th January 2013 14:12 GMT </p>
-            <p>Last request logged: 13th January 2013 14:12 GMT </p>
-            <p>Last request logged: 13th January 2013 14:12 GMT </p>
-            <p>Last request logged: 13th January 2013 14:12 GMT </p>
-            <p>Last request logged: 13th January 2013 14:12 GMT </p>
-            <p>Last request logged: 13th January 2013 14:12 GMT </p>
-            <p>Last request logged: 13th January 2013 14:12 GMT </p>
-            <p>Last request logged: 13th January 2013 14:12 GMT </p>
-          </div>
-        </div>
-      </div>
-      
-      <div class="border-3"></div>
+    <div class="border-1"></div>
         
-      <br/><br/><br/><!-- Temp Line Breaks -->
-      
-    </div>
-  </div>
+    <br/><br/><br/><!-- Temp Line Breaks -->
 
-  <!-- Add Camera Form -->
+    <!-- Add Camera Form -->
   
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
