--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -14,100 +14,100 @@
   
   <div class="border-1"></div>
   
-    <div class="streamList">
-      <div class="streamContainer">
-        <div class="row">
-          <div class="col-md-4 col-sm-12">
-            <a href="#"><img class="img-responsive" src="/img/rememberance.jpg" width="265px"></a>
-          </div>
-          <div class="col-md-8 col-sm-12">
-            <div class="right_container">
-              <div class="online">
-                <h4><a href="#">Remembrance Cam</a></h4>
-                <div class="positionTest">
-                  <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
-                </div>
-              </div>
-              <div class="camAddress">
-                <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
-              </div>
-              <div class="url">
-                <p>Internal URL: 89.101.225.151</p>
-                <p>External URL: 24.192.38.337</p>
-              </div>
-              <h5>Accessed by:</h5>
-              <p class="userInfo">Marco Herbst</p>
-            </div>
-          </div> 
+  <div class="streamList">
+    <div class="streamContainer">
+      <div class="row">
+        <div class="col-md-4 col-sm-12">
+          <a href="#"><img class="img-responsive" src="/img/rememberance.jpg" width="265px"></a>
         </div>
+        <div class="col-md-8 col-sm-12">
+          <div class="right_container">
+            <div class="offline">
+              <h4><a href="#">Remembrance Cam</a></h4>
+              <div class="positionTest">
+                <p><i class="fa fa-1x fa-minus-circle icon-align-center"></i>Offline</p>
+              </div>
+            </div>
+            <div class="camAddress">
+              <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
+            </div>
+            <div class="url">
+              <p>Internal URL: 89.101.225.151</p>
+              <p>External URL: 24.192.38.337</p>
+            </div>
+            <h5>Accessed by:</h5>
+            <p class="userInfo">Marco Herbst</p>
+          </div>
+        </div> 
       </div>
     </div>
+  </div>
 
   <div class="border-1"></div>
 
-    <div class="streamList">
-      <div class="streamContainer">
-        <div class="row">
-          <div class="col-md-4 col-sm-12">
-            <a href="#"><img class="img-responsive" src="/img/rememberance.jpg" width="265px"></a>
-          </div>
-          <div class="col-md-8 col-sm-12">
-            <div class="right_container">
-              <div class="online">
-                <h4><a href="#">Remembrance Cam</a></h4>
-                <div class="positionTest">
-                  <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
-                </div>
-              </div>
-              <div class="camAddress">
-                <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
-              </div>
-              <div class="url">
-                <p>Internal URL: 89.101.225.151</p>
-                <p>External URL: 24.192.38.337</p>
-              </div>
-              <h5>Accessed by:</h5>
-              <p class="userInfo">Marco Herbst</p>
-            </div>
-          </div> 
+  <div class="streamList">
+    <div class="streamContainer">
+      <div class="row">
+        <div class="col-md-4 col-sm-12">
+          <a href="#"><img class="img-responsive" src="/img/rememberance.jpg" width="265px"></a>
         </div>
+        <div class="col-md-8 col-sm-12">
+          <div class="right_container">
+            <div class="online">
+              <h4><a href="#">Remembrance Cam</a></h4>
+              <div class="positionTest">
+                <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+              </div>
+            </div>
+            <div class="camAddress">
+              <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
+            </div>
+            <div class="url">
+              <p>Internal URL: 89.101.225.151</p>
+              <p>External URL: 24.192.38.337</p>
+            </div>
+            <h5>Accessed by:</h5>
+            <p class="userInfo">Marco Herbst</p>
+          </div>
+        </div> 
       </div>
     </div>
+  </div>
 
   <div class="border-1"></div>
   
-    <div class="streamList">
-      <div class="streamContainer">
-        <div class="row">
-          <div class="col-md-4 col-sm-12">
-            <a href="#"><img class="img-responsive" src="/img/rememberance.jpg" width="265px"></a>
-          </div>
-          <div class="col-md-8 col-sm-12">
-            <div class="right_container">
-              <div class="online">
-                <h4><a href="#">Remembrance Cam</a></h4>
-                <div class="positionTest">
-                  <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
-                </div>
-              </div>
-              <div class="camAddress">
-                <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
-              </div>
-              <div class="url">
-                <p>Internal URL: 89.101.225.151</p>
-                <p>External URL: 24.192.38.337</p>
-              </div>
-              <h5>Accessed by:</h5>
-              <p class="userInfo">Marco Herbst</p>
-            </div>
-          </div> 
+  <div class="streamList">
+    <div class="streamContainer">
+      <div class="row">
+        <div class="col-md-4 col-sm-12">
+          <a href="#"><img class="img-responsive" src="/img/rememberance.jpg" width="265px"></a>
         </div>
+        <div class="col-md-8 col-sm-12">
+          <div class="right_container">
+            <div class="online">
+              <h4><a href="#">Remembrance Cam</a></h4>
+              <div class="positionTest">
+                <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+              </div>
+            </div>
+            <div class="camAddress">
+              <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
+            </div>
+            <div class="url">
+              <p>Internal URL: 89.101.225.151</p>
+              <p>External URL: 24.192.38.337</p>
+            </div>
+            <h5>Accessed by:</h5>
+            <p class="userInfo">Marco Herbst</p>
+          </div>
+        </div> 
       </div>
     </div>
+  </div>
 
-    <div class="border-1"></div>
+  <div class="border-1"></div>
         
-    <br/><br/><br/><!-- Temp Line Breaks -->
+  <br/><br/><!-- Temp Line Breaks -->
 
     <!-- Add Camera Form -->
   
