--- a/app/web/views/users/cameras/view.erb
+++ b/app/web/views/users/cameras/view.erb
@@ -23,6 +23,8 @@
               </div>
               <div class="camAddress">
                 <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
+              </div>
+              <div class="Refresh">
                 <a href="#"><p><i class="fa fa-1x fa-repeat icon-align-center blue"></i>Refresh</p></a>
               </div>
               <div class="settingsButton">
