--- a/app/web/views/layouts/docs.erb
+++ b/app/web/views/layouts/docs.erb
@@ -24,19 +24,8 @@
             API V1
             <ul>
               <li><a href='/docs/api/v1/authentication'>Authentication</a></li>
-              <li><a href='/docs/api/v1/cameras'>Cameras</a></li>
-              <li><a href='/docs/api/v1/users'>Users</a></li>
-              <li><a href='/docs/api/v1/vendors'>Vendors</a></li>
-              <li><a href='/docs/api/v1/models'>Models</a></li>
-            </ul>
-            </li>
-          </ul>
-          <ul>
-            <li>
-            <i class='fa fa-code'></i>
-            Swagger
-            <ul>
-              <li><a href='/docs/api/v1/swagger'>API Try-Out</a></li>
+              <li><a href='/docs/api/v1/swagger'>Endpoints</a></li>
+              <li><a href='/docs/api/clients/evercam.js'>evercam.js</a></li>
             </ul>
             </li>
           </ul>
@@ -47,7 +36,6 @@
             <ul>
               <li><a href='http://github.com/evercam/evercam.py' target='_blank'>Python</a></li>
               <li><a href='http://github.com/evercam/evercam.node' target='_blank'>NodeJS</a></li>
-              <li><a href='/docs/api/clients/evercam.js'>JavaScript</a></li>
               <li><a href='http://github.com/evercam/evercam.java' target='_blank'>Java</a></li>
               <li>more soon&hellip;</li>
             </ul>
