minor markup changes to documentation page titles

--- a/app/web/views/docs/api/clients/evercam.js.erb
+++ b/app/web/views/docs/api/clients/evercam.js.erb
@@ -1,4 +1,4 @@
-<h1>Evercam.js</h1>
+<h1><%= @title = 'evercam.js' %></h1>
 <p>
   Evercam.js allows you to easily access all evercam.io APIs and also works as jQuery plugin which can easily show image
   from any evercam-enabled camera on a website.
