--- a/app/web/views/docs/api/v1/authentication.erb
+++ b/app/web/views/docs/api/v1/authentication.erb
@@ -1,4 +1,4 @@
-<h1>Authentication</h1>
+<h1>API <%= @title = 'Authentication' %></h1>
 <p>
 The evercam REST API supports multiple different authentication mechanisms to ensure that whatever environment you find yourself in, we've got you covered. This section of the documentation outlines the various methods available.
 </p>
