--- a/app/web/views/docs/api/v1/swagger.erb
+++ b/app/web/views/docs/api/v1/swagger.erb
@@ -35,7 +35,7 @@
 
 </script>
 
-<h1>Try-Out</h1>
+<h1>API <%= @title = 'Endpoints' %></h1>
 <div id="swagger">
   <div id="swagger-ui-container" class="swagger-ui-wrap">
     &nbsp;
