--- a/app/web/views/docs/index.erb
+++ b/app/web/views/docs/index.erb
@@ -33,7 +33,7 @@
         <p>After <a href="/signup">signing up</a> and confirming your account, we recommend the following starting points as they quickly cover what most developers want to achieve.</p>
         <ul>
           <li><a href="/docs/api/v1/authentication">Authenticating to the API</a></li>
-          <li><a href="/docs/api/v1/endpoints">Connecting a Camera</a></li>
+          <li><a href="/docs/api/v1/swagger">Connecting a Camera</a></li>
         </ul>
       </div>
     </div>
