--- a/app/web/views/signup.erb
+++ b/app/web/views/signup.erb
@@ -1,7 +1,7 @@
 <div class='col-sm-10 col-sm-offset-1'>
 	<div class="form_container">
 		<div class ="signup"><% @title = 'Signup' %> 
-		<h1>Sign Up</h1>
+		<h1>Create an account</h1>
 			<div class="row">
 				<div class="col-sm-10 col-sm-offset-1">
 					<form method="POST" role="form">
