updated markup to homepage

--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -5,14 +5,15 @@
         <div class="slider">
           <div class="camera_wrap">
             <div class="image">
-              <h1>Making Cameras More Useful...</h1>
-              <p>With Evercam, you write software once and it works with over 1,600 cameras.</p>
-              <div class="hidden-xs">
-                <p>OAuth 2.0 RESTful JSON API's use the standards you already know.</p>
+              <h2>Making Cameras More Useful</h2>
+                <div class="imageButton">
                 <a href="/signup" class="btn btn-lg">
                   <button id="signup" type="submit" class="btn btn-default" value="Sign up">Sign up</button>
                 </a>
-              </div>
+                </div>
+                <h4>With Evercam, you write software once and it works with over 1,600 cameras.</h4>
+                <h4>OAuth 2.0 RESTful JSON API's use the standards you already know.</h4>
+              <div class="border-1"></div>
             </div>
           </div>
         </div>
@@ -25,19 +26,6 @@
 
   <div id="beta">
     <div class="container">
-      <div class="row">
-        <div class="titlesList">
-          <div class="col-sm-4">
-            <p class="developerColor">Developer</p>
-          </div>
-          <div class="col-sm-4">
-            <p>Camera Owner</p>
-          </div>
-          <div class="col-sm-4">
-            <p>Manufacturer</p>
-          </div>
-        </div>
-      </div>
 
       <div class="row">
         <div class="language">
