--- a/app/web/views/contact.erb
+++ b/app/web/views/contact.erb
@@ -32,17 +32,26 @@
           <p>The Ierne Ballroom, 12 Parnell Square East, Dublin 1, <br/>Ireland</p>
           <p>Telephone:  +353 (1) 538 3333</p>
           <p>E-Mail: <a href="mailto:info@evercam.io">howrya@evercam.io</a></p>
-          <div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kuabCDr3nlic" width="640" height="480"></iframe></div>
-        </div>
+            <div class="map">
+              <script type="text/javascript" src="http://www.webestools.com/google_map_gen.js?lati=53.354328&long=-6.262840&zoom=18&width=480&height=300&mapType=normal&map_btn_normal=yes&map_btn_satelite=yes&map_btn_mixte=yes&map_small=yes&marqueur=yes&info_bulle="></script>
+            </div>
+          </div>
         <div class="col-md-6">
           <h4>Mountain View, California</h4>
           <p>800 W. El Camino Real, Suite 350, Mountain View,<br/> CA 94040, USA</p>
           <p>Telephone:  +1 (650) 419 3588</p>
           <p>E-Mail: <a href="mailto:info@evercam.io">whassup@evercam.io</a></p>
           <div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kzJ0biOyIYMo" width="640" height="480"></iframe></div>
+
+          
+          <div id="myMap">
+          
+          </div>
+
         </div>
       </div><!-- end address -->
     </div>
   </div>
 </div>
+
 
