updated markup and style to contact.erb - replaced maerkup for google maps

--- a/app/web/views/contact.erb
+++ b/app/web/views/contact.erb
@@ -29,7 +29,7 @@
       <div class="address">
         <div class="col-md-6">
           <h4>Dublin</h4>
-          <p>The Ierne Ballroom, 12 Parnell Square East, Dublin 1, <br/>Ireland</p>
+          <p>The Ierne Ballroom, 12 Parnell Square East, <br/>Dublin 1, Ireland</p>
           <p>Telephone:  +353 (1) 538 3333</p>
           <p>E-Mail: <a href="mailto:info@evercam.io">howrya@evercam.io</a></p>
             <div class="map">
@@ -41,17 +41,11 @@
           <p>800 W. El Camino Real, Suite 350, Mountain View,<br/> CA 94040, USA</p>
           <p>Telephone:  +1 (650) 419 3588</p>
           <p>E-Mail: <a href="mailto:info@evercam.io">whassup@evercam.io</a></p>
-          <div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kzJ0biOyIYMo" width="640" height="480"></iframe></div>
-
-          
-          <div id="myMap">
-          
+          <div class="map">
+            <script type="text/javascript" src="http://www.webestools.com/google_map_gen.js?lati=37.386254&long=-122.084225&zoom=18&width=480&height=300&mapType=normal&map_btn_normal=yes&map_btn_satelite=yes&map_btn_mixte=yes&map_small=yes&marqueur=yes&info_bulle="></script>
           </div>
-
         </div>
       </div><!-- end address -->
     </div>
   </div>
 </div>
-
-
