--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -10,7 +10,7 @@
                 <h2>Making Cameras More Useful</h2>
                   <div class="imageButton">
                   <a href="/signup" class="btn btn-lg">
-                    <button id="signup" type="submit" class="btn btn-default" value="Sign up">Sign up</button>
+                    <button id="signup" type="submit" class="btn btn-default" value="Sign up">Create Account</button>
                   </a>
                   </div>
                   <h4>With Evercam, you write software once and it works with over 1,600 cameras.</h4>
@@ -82,11 +82,10 @@
           <div class="col-sm-10 col-sm-offset-1">
             <form method='POST' action='/interested' class="form-inline" role="form">
               <h3>Interested? Sign Up Today&hellip;</h3>
-              <div class="form-group">
-                <!--<label class="sr-only" id="email" for="exampleInputEmail2">Email address</label>-->
-                <input type="email" class="form-control" name='email' id="email" placeholder="Your email">
-              </div>
-              <button id="signup" type="submit" class="btn btn-default" value="Sign up">Sign up</button>
+                <div class="form-group">
+                  <input type="email" class="form-control" name='email' id="email" placeholder="Your email">
+                </div>
+                <button id="joinNewsletter" type="submit" class="btn btn-default" value="joinNewsletter">Join Newsletter</button>              
             </form>
           </div>
         </div>
