added connect to android link

--- a/app/web/views/layouts/docs.erb
+++ b/app/web/views/layouts/docs.erb
@@ -48,7 +48,7 @@
             <i class='fa fa-link'></i>
             Connect
             <ul>
-              <li>coming soon&hellip;</li>
+              <li><a href="https://github.com/evercam/android.connect" target="_new">Android Connect</li>
           </ul>
         </div>
 
