--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -2697,7 +2697,13 @@ font-weight: normal;
   margin-bottom: 5px;
 }
 
-#inputArea{
+.col-sm-8 label {
+  font-weight: normal;
+  font-size: 14px;
+  padding-top: 10px;
+}
+
+.modal-body input.form-control, .modal-body select {
   border: 1px solid #EB5F53;
   border-radius: 5px;
   color: #373D4D;
@@ -2708,6 +2714,10 @@ font-weight: normal;
   padding: 10px 20px;
   vertical-align: top;
   width: 100%;
+}
+
+.modal-body select {
+ padding: 6px 12px;
 }
 
 #TZinputArea{
